Fix: clicking button toggles open dropdowns, escape key closes dropdowns, arrow key selections are visible, clicking dropdown items closes dropdown

--- a/caktus_primer/static/stylus/index.styl
+++ b/caktus_primer/static/stylus/index.styl
@@ -77,3 +77,9 @@ generate-grid(columns)
 				outline: none
 				text-decoration: none
 				width: 100%
+			
+				&:hover
+					border: none
+		
+			&.selected a
+				background-color: getColorSetColor("content-success", "hover")
